# pyspamcop

./: .gitignore  Makefile  README.md  pyproject.toml
src/pyspamcop/: config.py  domain.py  exception.py  html.py  main.py
src/pyspamcop/http/: client.py
src/pyspamcop/spamcop/: client.py
tests/: test_config.py  test_domain.py  test_html_parser.py  test_http_client.py
tests/fixtures/: post_reporting.html  sample_cfg.yaml
tests/spamcop/: test_client.py
